@@ -25,9 +25,11 @@ urq-welcome=[font=default-bold]Welcome to Ultimate Research Queue![/font]\n\nCli
 [message]
 urq-already-in-queue=This technology is already queued for research
 urq-already-researched=This technology is already researched
+urq-has-disabled-prerequisites=One or more prerequisites is disabled
 urq-queue-is-full=Research queue is full
 urq-recreated-gui=[Ultimate Research Queue] Something went wrong, so the GUI was re-created
 urq-research-completed=Research completed: [technology=__1__]
+urq-tech-is-disabled=This technology is disabled
 urq-too-many-prerequisites-queue-full=Too many prerequisites to fit in the research queue
 urq-too-many-unresearched-prerequisites=Too many unresearched prerequisites
 urq-vanilla-queue-disabled=[Ultimate Research Queue] The vanilla research queue is incompatible with this mod and has been disabled.
